Initial commit - consumer only prototype.
git-svn-id: http://xp-dev.com/svn/kafkaphp/trunk@3 4f6741ee-d1fe-45f4-8443-8b850bfd67de

--- a/README
+++ b/README
@@ -1,7 +1,7 @@
 This is an alternative to the existing Kafka PHP Client which is in the incubator,
-the main motivation to write this alternative was that it seemed important
+the main motivation to write it was that it seemed important
 that the fetch requests are not loaded entirely into memory but
-pulled continuously from the socket as the fact that php request has a different control flow
+pulled continuously from the socket as well as the fact that php has a different control flow
 and communication pattern (each request is a thread within http server)
 so the api doesn't need to follow the scala/java object graph and can be much simpler.
  
