Added experimental implementation of the new wire format. Created and example of consistent consumer. Fixed few bugs when passing around offset objects - they need to be cloned always.
git-svn-id: http://xp-dev.com/svn/kafkaphp/trunk@21 4f6741ee-d1fe-45f4-8443-8b850bfd67de

--- a/README
+++ b/README
@@ -24,9 +24,6 @@ Examples
 
 TODOs
 
-IN PROGRESS - implement versioned wire format 0.8
-IN PROGRESS maxSize check when fetching and throw Kafka_Exception when overflown
-IN PROGRESS add getTopic() for Message 
+IN PROGRESS - implement the new versioned wire format 0.8 and acknowledgements - waiting for stable branch
 TODO Snappy compression (could not compile snappy.so on 64-bit) 
-TODO implement produce acknowledgement once implemented in kafka (maybe add look at the jira to do it)
 
