Messages produced in compressed batches consumed transparently using innerStream.
git-svn-id: http://xp-dev.com/svn/kafkaphp/trunk@30 4f6741ee-d1fe-45f4-8443-8b850bfd67de

--- a/README
+++ b/README
@@ -9,11 +9,13 @@ so the api doesn't need to follow the scala/java object graph and can be much si
     - streaming message individually rather than loading the whole response into memory
     - offset implemented by hexdecimal tranformation to fully support Kafka long offsets 
     - gzip working correctly both ways, including the pre-compression message header
+    - messages produced in batch consumed correctly in compressed as well as uncompressed state
     - crc32 check working
     - Producers and Consumers are abstracted to allow for changes in Kafka API without disrupting the client code 
     - Broker abstraction for different connection strategies
     - OffsetRequest workaround for 64-bit unix timestamp
     - Produce Request only checks correct bytes were sent (ack not available)
+
 
 
 Examples
@@ -22,14 +24,14 @@ Examples
 />php ./scripts/producer.php
 
 
-TODOs
 
-IN PROGRESS - profiling & optimization
+TODO Batch producer (with compressed message set) - this would be useful for tail -f .. | type of producers 
+TODO - profiling & optimization
     - Channel - implement buffer in the hasIncomingData to speed-up the streaming and read from that buffer in the read() method
     - ConsumerChannel - profile consumption (decompression & descerialization cost, flushing broken response stream)
     - ProducerChannel - profile production (compression & serialization cost, )
-IN PROGRESS - implement the new versioned wire format 0.8 and acknowledgements 
-    - waiting for a stable 0.8 candidate
 TODO Snappy compression     
-    - could not compile snappy.so on 64-bit) 
+    - could not compile snappy.so on 64-bit :(
+TODO - implement the new versioned wire format 0.8 and acknowledgements 
+    - waiting for a stable 0.8 candidate
 
